@@ -4,14 +4,14 @@ Thunor: I've fixed these or found them to have already been fixed:
 (2)  There is no gtk_combo_box support, we have only gtk_combo.
 (3)  The edit is not producing value on the output.
 (4)  06.01-editor_attributes: The edit does not handle the <default> attribute.
+(5)  06.01-editor_attributes: Custom type properties, such as 
+      "wrap-mode"            GtkWrapMode           : Read / Write
+     are not supported. (Thunor: it already works as a tag attribute).
 (7)  Segfault if no name given for the frame.
 (12) Segmentation fault when the table has no variable name.
 
 Thunor: These still remain:
 ---------------------------
-(5)  06.01-editor_attributes: Custom type properties, such as 
-      "wrap-mode"            GtkWrapMode           : Read / Write
-     are not supported.
 (6)  10.01-vbox_and_hbox_attributes: we always packing with the defaults.
 (8)  All the action handling functions (button_pressed) should get a type
      parameter showing what kind of command has to be executed.
