@@ -1,3 +1,9 @@
+* Wed Sep 7 2011 Thunor <thunorsif@hotmail.com>
+- Fixed a bug in fill_clist_by_items whereby the item string was being
+  corrupted by the linecutter function and wouldn't refresh. Item
+  directive memory requires duplicating first prior to being chopped-up.
+- Added examples/table/table_advanced.
+
 * Tue Sep 6 2011 Thunor <thunorsif@hotmail.com>
 - Added examples/edit/edit_advanced.
 
